--- a/app/src/main/res/layout/activity_registro_almacen.xml
+++ b/app/src/main/res/layout/activity_registro_almacen.xml
@@ -2,15 +2,19 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="center">
+    android:gravity="center"
+    android:background="@color/azul">
 
     <EditText
         android:id="@+id/editTextNombreAlmacen"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="64dp"
         android:hint="Nombre del Almacén"
-        android:inputType="text" />
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"
+        android:inputType="text"
+        android:textColor="@color/white"
+        android:textColorHint="@color/white"/>
 
     <EditText
         android:id="@+id/editTextEmail"
@@ -18,8 +22,12 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/editTextNombreAlmacen"
         android:layout_marginTop="20dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"
         android:hint="Correo electrónico"
-        android:inputType="textEmailAddress" />
+        android:inputType="textEmailAddress"
+        android:textColor="@color/white"
+        android:textColorHint="@color/white"/>
 
     <EditText
         android:id="@+id/editTextContraseña"
@@ -27,8 +35,12 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/editTextEmail"
         android:layout_marginTop="20dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"
         android:hint="Contraseña"
-        android:inputType="textPassword" />
+        android:inputType="textPassword"
+        android:textColor="@color/white"
+        android:textColorHint="@color/white"/>
 
     <Button
         android:id="@+id/buttonRegistrarAlmacen"
@@ -36,8 +48,11 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/editTextContraseña"
         android:layout_marginTop="20dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginEnd="20dp"
-        android:text="Registrar Nuevo Almacén" />
+        android:layout_marginStart="40dp"
+        android:layout_marginEnd="40dp"
+        android:text="Registrar Nuevo Almacén"
+        android:textSize="18sp"
+        android:textStyle="bold"
+        android:backgroundTint="@color/rojo"/>
 
 </RelativeLayout>
