--- a/app/src/main/res/layout/activity_main_almacen.xml
+++ b/app/src/main/res/layout/activity_main_almacen.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity"
+    tools:context=".usuario.MainActivityUsuario"
     android:orientation="vertical"
     android:gravity="center"
     android:background="@color/azul">
@@ -14,12 +14,14 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="25dp">
        <TextView
+           android:id="@+id/titulo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="35sp"
            android:textStyle="bold"
            android:text="Dash Board"
-           android:textColor="@color/naranja"/>
+           android:textColor="@color/naranja"
+           android:textAlignment="center"/>
     </LinearLayout>
 
     <GridLayout
