Actualización de estilos
Estilo de recuadro para los productos y adición de estilos para la sección de agregar productos

--- a/app/src/main/res/layout/activity_crear_producto.xml
+++ b/app/src/main/res/layout/activity_crear_producto.xml
@@ -6,21 +6,29 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".producto.CrearProducto"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:background="@color/azul">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:layout_gravity="center"
+        android:layout_gravity="center_horizontal"
         android:padding="20dp">
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Crear Producto"
             android:gravity="center"
-            android:textSize="20sp"
-            android:textStyle="bold"/>
+            android:textSize="28sp"
+            android:textStyle="bold"
+            android:textColor="@color/white"/>
+        <ImageView
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:layout_marginTop="35dp"
+            android:src="@drawable/add_circle_24px"
+            android:layout_gravity="center_horizontal"/>
     </LinearLayout>
 
     <LinearLayout
@@ -31,41 +39,55 @@
 
         <EditText
             android:id="@+id/nombre"
-            android:layout_width="250dp"
+            android:layout_width="320dp"
             android:layout_height="wrap_content"
-            android:hint="Nombre"/>
+            android:hint="Nombre"
+            android:textColor="@color/white"
+            android:textColorHint="@color/white"/>
 
         <EditText
             android:id="@+id/descripcion"
-            android:layout_width="250dp"
+            android:layout_width="320dp"
             android:layout_height="wrap_content"
-            android:hint="Descripción"/>
+            android:hint="Descripción"
+            android:textColor="@color/white"
+            android:textColorHint="@color/white"/>
 
         <EditText
             android:id="@+id/precio"
-            android:layout_width="250dp"
+            android:layout_width="320dp"
             android:layout_height="wrap_content"
             android:hint="Precio"
-            android:inputType="number"/>
+            android:inputType="number"
+            android:textColor="@color/white"
+            android:textColorHint="@color/white"/>
 
         <EditText
             android:id="@+id/cantidad"
-            android:layout_width="250dp"
+            android:layout_width="320dp"
             android:layout_height="wrap_content"
             android:hint="Cantidad"
-            android:inputType="number"/>
+            android:inputType="number"
+            android:textColor="@color/white"
+            android:textColorHint="@color/white"/>
 
         <EditText
             android:id="@+id/nombreAlmacen"
-            android:layout_width="250dp"
+            android:layout_width="320dp"
             android:layout_height="wrap_content"
-            android:focusable="false"/>
+            android:focusable="false"
+            android:textColor="@color/white"
+            android:textColorHint="@color/white"/>
 
         <Button
             android:id="@+id/crear_producto"
-            android:layout_width="wrap_content"
+            android:layout_width="200dp"
             android:layout_height="wrap_content"
-            android:text="Crear Producto"/>
+            android:text="Crear Producto"
+            android:textSize="16sp"
+            android:textStyle="bold"
+            android:layout_marginTop="32dp"
+            android:backgroundTint="@color/rojo"/>
     </LinearLayout>
 
 
