--- a/app/src/main/res/layout/activity_login_almacen.xml
+++ b/app/src/main/res/layout/activity_login_almacen.xml
@@ -90,12 +90,13 @@
         android:id="@+id/buttonLoginUsuario"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/buttonRegistrarNuevoAlmacen"
+        android:layout_above="@+id/editTextNombreAlmacen"
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginStart="107dp"
-        android:layout_marginTop="21dp"
-        android:layout_marginEnd="104dp"
+        android:layout_marginStart="209dp"
+        android:layout_marginTop="-500dp"
+        android:layout_marginEnd="2dp"
+        android:layout_marginBottom="24dp"
         android:backgroundTint="@color/rojo"
         android:text="Usuarios"
         android:textSize="16sp"
