--- a/app/src/main/res/layout/activity_registro_almacen.xml
+++ b/app/src/main/res/layout/activity_registro_almacen.xml
@@ -55,4 +55,16 @@
         android:textStyle="bold"
         android:backgroundTint="@color/rojo"/>
 
+    <Button
+        android:id="@+id/buttonIrALogin"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/buttonRegistrarAlmacen"
+        android:layout_marginTop="20dp"
+        android:layout_marginStart="40dp"
+        android:layout_marginEnd="40dp"
+        android:text="Ir a Login"
+        android:textSize="18sp"
+        android:textStyle="bold"
+        android:backgroundTint="@color/rojo"/>
 </RelativeLayout>
