--- a/app/src/main/res/layout/item_usuario_producto.xml
+++ b/app/src/main/res/layout/item_usuario_producto.xml
@@ -1,4 +1,4 @@
-<!-- item_producto.xml -->
+<!-- item_usuario_producto.xml -->
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
@@ -7,59 +7,78 @@
     android:padding="10dp"
     android:background="@color/azul">
 
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:animateLayoutChanges="true"
-        android:orientation="vertical"
-        android:background="@drawable/style_borde">
+        android:background="@drawable/style_borde"
+        android:orientation="vertical">
+
+        <!-- TextView para el nombre del almacén -->
+        <TextView
+            android:id="@+id/nombre_almacen"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginBottom="8dp"
+            android:text="Nombre del Almacén"
+            android:textColor="@color/black"
+            android:textSize="17sp" />
+
+        <!-- TextView para el nombre del producto -->
         <TextView
             android:id="@+id/nombre_producto"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="22sp"
-            android:text="name"
-            android:textStyle="bold"
-            android:layout_marginBottom="8dp"
             android:layout_gravity="center_horizontal"
-            android:textColor="@color/maroon"/>
+            android:layout_marginBottom="8dp"
+            android:text="Nombre del Producto"
+            android:textColor="@color/maroon"
+            android:textSize="22sp"
+            android:textStyle="bold" />
 
+        <!-- TextView para la descripción del producto -->
         <TextView
             android:id="@+id/descripcion_producto"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:layout_marginBottom="8dp"
-            android:text="descripcion"
-            android:textSize="17sp"
-            android:textColor="@color/black"/>
+            android:text="Descripción"
+            android:textColor="@color/black"
+            android:textSize="17sp" />
 
+        <!-- LinearLayout horizontal para el precio y la cantidad -->
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
+
+            <!-- TextView para el precio del producto -->
             <TextView
                 android:id="@+id/precio_producto"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="17sp"
-                android:text="price"
-                android:layout_marginBottom="8dp"
                 android:layout_marginStart="25dp"
-                android:textColor="@color/azul"/>
+                android:layout_marginBottom="8dp"
+                android:text="Precio"
+                android:textColor="@color/azul"
+                android:textSize="17sp" />
 
+            <!-- TextView para la cantidad del producto -->
             <TextView
                 android:id="@+id/cantidad_producto"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="200dp"
                 android:layout_marginEnd="10dp"
-                android:text="cantidad"
-                android:textSize="17sp"
-                android:textColor="@color/black"/>
+                android:text="Cantidad"
+                android:textColor="@color/black"
+                android:textSize="17sp" />
         </LinearLayout>
 
-        <!-- Agregar botón de Comprar -->
+        <!-- Botón para comprar -->
         <Button
             android:id="@+id/btn_comprar"
             android:layout_width="wrap_content"
@@ -67,7 +86,8 @@
             android:layout_marginStart="25dp"
             android:layout_marginBottom="15dp"
             android:backgroundTint="@color/rojo"
-            android:text="Comprar"/>
+            android:text="Comprar" />
+
     </LinearLayout>
 
 </LinearLayout>
